divide different webpack function into different files

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -1,6 +1,10 @@
 body{
   background-color: whitesmoke;
 }
+h1{
+  font-size: 16px;
+  text-decoration: underline;
+}
 .item{
   position: relative;
   float: left;
